<resources>
    <string name="app_name">GroupZ</string>
    <!--Errors-->
    <string name="errorAuthEmailPassword">El Email o el Password no son correctes</string>
    <string name="errorEmptyField">El camp esta vuit</string>
    <string name="errorNotValidMail">No es un Email valid</string>
    <string name="errorNotValidName">Has de introduir un nom!</string>
    <string name="errorWeakPassword">La contrasenya es molt fluixa</string>
    <string name="errorPasswordDontMatch">Les contrasenyes no coincideixen</string>
    <string name="errorNotCheck">Has de marcar la casella</string>
    <string name="errorDate">La data es incorrecte</string>
    <string name="errorUserNotCreated">Esta cuenta ya esta registrada</string>
    <string name="errorNotChat">No tens cap chat</string>

    <!--Generic-->
    <string name="email">Correu</string>
    <string name="password">Contrasenya</string>
    <string name="login">login</string>
    <string name="forgotPassword">Has oblidat la Contrasenya?</string>
    <string name="or">o</string>
    <string name="noAccount">No tienes cuenta?</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Iniciar Sesió</string>
    <string name="titleRegister">Registre</string>
    <string name="name">Nombre</string>
    <string name="location">Ubicación</string>
    <string name="birth">Data de Naixement</string>
    <string name="hobbies">Hobbies</string>
    <string name="cbTerms"><u>Accepto els termes i condicions de l\'aplicació</u></string>
    <string name="btnRegister">Continuar</string>
    <string name="tvAccountLog">Ja tens compte?</string>
    <string name="userCreated">Compte Creat correctament</string>
    <string name="logOut">Tancar Sessió</string>
    <string name="delAccount">Eliminar Compte</string>
    <string name="accountDeleted">Usuari Eliminat </string>
    <string name="LogOut">Sessió tancada </string>
    <string name="messageChat">Escribe un mensaje</string>
    <string name="editProfile">Editar Perfil</string>
    <string name="createGroup">Crear Grupo</string>
    <string name="from">Cerca de ti</string>
    <string name="save">Guardar</string>
    <string name="images">Imágenes</string>
    <string name="newimages">Afegir Imatge</string>
    <string name="description">Descripción</string>
    <string name="members">Membres</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="search">Buscar…</string>
    <string name="recommendedEvents">Recomendados</string>
    <string name="my_profile">Perfil</string>
    <string name="account">Cuenta</string>
    <string name="swipe">Swipe</string>
    <string name="near_people">Gente Cerca</string>
    <string name="events">Eventos</string>
    <string name="chats">Chats</string>
    <string name="my_groups">Mis Grupos</string>
    <string name="my_events">Mis Eventos</string>
    <string name="notifications">Notificaciones</string>
    <string name="create_event">Nuevo Evento</string>
    <string name="event_date">Fecha</string>
    <string name="privacy">Privacidad</string>
    <string name="public_">Publico</string>
    <string name="private_">Privado</string>
    <!--Alerts-->

    <!--hints-->
    <string name="nameHint">Introdueix el teu nom</string>
    <string name="birthHint">DD/MM/YYYY</string>
    <string name="hobbiesHint">Introdueix els teus hobbies</string>
    <string name="mailHint">mail@example.com</string>
    <string name="passHint">Ha de contenir 8 Caracters</string>
    <string name="passConfirm">Confirmar la contrasenya</string>
    <string name="passConfirmHint">Torna a Introduir la contrasenya</string>
    <string name="deleteAccountConfirmation">¿Estás segur de que vols eliminar el compte?</string>
    <string name="tvDescription">Descripción</string>
    <string name="tvInterestsHobbies">Intereses/Hobbies</string>
    <string name="tvReEmail"> Introdueix el correu per recuperar la contrasenya</string>
    <string name="etReEmail"> Introdueix el teu Correu</string>
    <string name="Robot">No soc un Robot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_message">Escribe tu mensaje...</string>

</resources>