<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.home.fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_logo_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_name"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_logo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.35">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/custom_icon_email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:fontFamily="@font/poppins_bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/custom_icon_password"
            android:drawablePadding="16dp"
            android:ems="10"
            android:fontFamily="@font/poppins_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvforgotPaswort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="end"
            android:text="@string/forgotPassword"
            android:textColor="@color/orange_focused"
            android:textSize="14sp" />

        <android.widget.Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </com.facebook.shimmer.ShimmerFrameLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/noAccount"
            android:textColor="@color/blue_no_focused"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:paddingStart="7dp"
            android:text="@string/signUp"
            android:textColor="@color/blue_primary"
            android:textSize="17sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


