<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".ui.activities.main.fragments.groups.CreateGroupFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView

            android:id="@+id/tvEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_weight="1"
            android:text="Crear Group"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"/>

        <android.widget.Button
            android:id="@+id/btnSaveGrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Guardar"
            android:background="@drawable/custom_button"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Foto"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardCornerRadius="30sp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_pictures" />
    </androidx.cardview.widget.CardView>

    <EditText

        android:id="@+id/editTextTextGrupoName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nom del grup"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/editTextTextGrupoName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hobbiesHint"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType=""
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/editTextTextGrupoName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/members"
        android:inputType="textPersonName" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>